# pray

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  ui.rs
