[package]
name = "pray"
version = "1.0.2"
authors = ["mefengl"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tui tool for preparing a prompt to the llms."
readme = "README.md"
homepage = "https://github.com/mefengl/pray"
repository = "https://github.com/mefengl/pray"
keywords = ["tui", "llm", "clipboard", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
  ".github",
]

[dependencies]
clipboard = "0.5.0"
crossterm = "0.28.1"
ratatui = "0.28.1"
