[package]
name = "pray"
version = "1.5.0"
authors = ["mefengl"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tui tool for preparing a prompt to the llms."
readme = "README.md"
homepage = "https://github.com/mefengl/pray"
repository = "https://github.com/mefengl/pray"
keywords = ["tui", "llm", "clipboard", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
  ".github",
]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clipboard = "0.5.0"
crossterm = "0.28.1"
directories = "5.0.1"
ignore = "0.4.23"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
